# notex

./: .dockerignore  .env.example  .gitignore  .stylelintrc.cjs  AGENTS.md  CODEX_PROMPT.md  COPILOT_GUIDELINES.md  Dockerfile  GOOGLE_AUTH_BROKER_PLAN.md  NOTE_EDITING_IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.github/: copilot-instructions.md
Audit/: 01_general_scss_inventory.md  02_variables_audit.md  03_typography_audit.md  04_breakpoints_audit.md  05_functions_mixins_audit.md  06_themes_audit.md  07_components_styles_audit.md  08_shell_styles_audit.md  09_pages_styles_audit.md  10_responsive_styles_audit.md  11_foundation_implementation_plan.md  12_component_primitives_plan.md  13_shell_layout_migration_plan.md  14_entity_pages_migration_plan.md  15_notes_list_grid_migration_plan.md  16_note_detail_editor_migration_plan.md  17_dashboard_migration_plan.md  99_css_audit_decision_log.md  css_audit_spec.md  spacing_audit.md
Documentation/: ARCHITECTURE_CONSTRAINTS.md  DATA_MODEL.md  LAYOUT.md  PAGES.md  README.md  ROUTES.md  STACK.md  style_system_guidelines.md
_OLD/: GOOGLE_LOGIN_IMPLEMENTATION_PLAN.md
_examples/: AUTH_IMPLEMENTATION_GUIDE.md  Optimizations.md  REFINED_INSTRUCTIONS.md  START_INSTRUCTIONS.md
data/: notex.sqlite-shm  notex.sqlite-wal
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: external_links.rs  lib.rs  sqlite_storage.rs  update_cleanup.rs
(+188 files in other folders)
